# aind-SmartSPIM-segmentation

./: .flake8  .gitignore  README.md  pyproject.toml
.codeocean/: datasets.json
code/: main.py  neuroglancer_utils.py  run  run_capsule.py  run_slurm
code/aind_smartspim_cell_proposals/utils/: utils.py
code/aind_smartspim_segmentation/: __init__.py  detect.py  segmentation.py  segmentation_2.py
code/aind_smartspim_segmentation/_shared/: types.py
code/aind_smartspim_segmentation/params/: __init__.py  default_detect_config.yaml  default_segment_config.yaml  default_segment_v2_config.yaml  params.py
code/aind_smartspim_segmentation/spot_detection/: __init__.py  detect.py
code/aind_smartspim_segmentation/spot_detection/traditional_detection/: puncta_detection.py  puncta_detection_optimized.py
code/aind_smartspim_segmentation/spot_detection/utils/: generate_precomputed_format.py  lazy_deskewing.py  utils.py
code/aind_smartspim_segmentation/traditional_detection/: puncta_detection.py  puncta_detection_optimized.py
code/aind_smartspim_segmentation/utils/: __init__.py  generate_precomputed_format.py  lazy_deskewing.py  neuroglancer_utils.py  utils.py
code/aind_smartspim_segmentation/zarr_writer/: blocked_zarr_writer.py  smartspim_zarr_writer.py  zarr_utilities.py
code/src/aind_smartspim_segmentation/: __init__.py  block_segmentation.py  block_utils.py  chunked_segmentation.py  chunked_utils.py  pymusica.py  segmentation.py  smartspim_config.yaml  smartspim_config.yml  utils.py
code/src/aind_smartspim_segmentation/cellfinder_core/detect/: detect.py
code/src/aind_smartspim_segmentation/cellfinder_core/detect/filters/volume/: ball_filter.pyx  structure_detection.cpp  volume_filter.py
code/tests/: __init__.py  test_segment_smartspim.py  test_utils.py
code/tests/resources/: local_json.json
code/tests/test_detection/: __init__.py  test_puncta_detection.py
environment/: Dockerfile  Dockerfile_local
examples/: pipeline_example.py
metadata/: metadata.yml
src/seg/: segmentation.py  utils.py
src/seg/cellfinder_core/detect/: detect.py
src/seg/cellfinder_core/detect/filters/: setup_filters.py
src/seg/cellfinder_core/detect/filters/plane/: base_tile_filter.cpp
src/seg/cellfinder_core/detect/filters/volume/: ball_filter.c  structure_detection.pyx
tests/: test_message_handler.py
