[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind_smartspim_segmentation"
description = "Segments smartspim datasets using a modified version of cellfinder."
license = {text = "MIT"}
requires-python = ">=3.7"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'dask==2023.2.0',
    'natsort==8.2.0',
    'argschema==3.0.4',
    'astropy==5.2.1',
    'photutils==1.6.0',
    'imlib==0.1.3',
    'zarr==2.13.6',
    'aind-data-schema==0.12.5',
    'cellfinder-core@git+https://github.com/camilolaiton/cellfinder-core.git@feature/lazy_reader'
]

[project.optional-dependencies]
dev = [
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'pygit2',
    'furo'
]

[tool.setuptools.packages.find]
where = ["code/src"]

[tool.setuptools.dynamic]
version = {attr = "aind_smartspim_segmentation.__version__"}

[tool.black]
line-length = 101
target_version = ['py36']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["aind_smartspim_segmentation", "cellfinder_core", "tests"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
fail_under = 100

[tool.isort]
line_length = 101
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100
