[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "aind_smartspim_cell_proposals"
description = "Identifies cell proposals from SmartSPIM datasets."
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Allen Institute for Neural Dynamics"}
]
classifiers = [
    "Programming Language :: Python :: 3"
]
readme = "README.md"
dynamic = ["version"]

dependencies = [
    'aind-large-scale-prediction @ git+https://github.com/AllenNeuralDynamics/aind-large-scale-prediction.git@py38-compatible',    
    'numpy==1.26.4',
    'scikit-image==0.22.0',
    'matplotlib==3.8.2',
    'scipy==1.10.1',
    'cupy-cuda11x==13.3.0',
    'neuroglancer==2.40.1',
    'aind-data-schema==1.2.0'
]

[project.optional-dependencies]
dev = [
    'black',
    'coverage',
    'flake8',
    'interrogate',
    'isort',
    'Sphinx',
    'pygit2',
    'furo'
]

[tool.setuptools.packages.find]
where = ["code"]

[tool.setuptools.dynamic]
version = {attr = "aind_smartspim_cell_proposals.__version__"}

[tool.black]
line-length = 101
target_version = ['py36']
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | build
    | dist
  )/
  | .gitignore
)
'''

[tool.coverage.run]
omit = ["*__init__*"]
source = ["aind_smartspim_cell_proposals", "tests"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
fail_under = 100

[tool.isort]
line_length = 101
profile = "black"

[tool.interrogate]
exclude = ["setup.py", "docs", "build"]
fail-under = 100
